--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 @use "core";
 @use "components";
-@use 'abstracts/variables';
-@use 'abstracts/mixins';
+@use 'abstract/variables';
+@use 'abstract/mixins';
 
