--- a/css/abstract/_mixins.scss
+++ b/css/abstract/_mixins.scss
@@ -1,4 +1,4 @@
-@use "../abstracts/variables" as var;
+@use "../abstract/variables" as var;
 @use "sass:math";
 
 // RESPONSIVE LAPTOP FIRST DESIGN MIXINS
