Added Home page code and components

--- a/css/components/_navbar.scss
+++ b/css/components/_navbar.scss
@@ -1,4 +1,9 @@
-.nabar{
-    padding: 150px !important;
-    
+.navbar{
+    .container{
+        .collapse{
+            @media (min-width:1440px) {
+                margin-left: 60px;
+            }
+        }
+    }
 }
