--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -1,3 +1,34 @@
+@use "../abstract/variables" as var;
+
 .hero-banner{
-    background-image: url();
+    background-image: url("/Applications/WEB dev/First Project/images/Images - Banner.jpg");
+    width: 100%;
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    margin-top: 50px;
+
+    .hero-content{
+        h1{
+            width: 45%;
+            margin-left: auto;
+            margin-right: auto;
+            @media (max-width:768px) {
+                width: 100%;
+                font-size: 42px;
+                padding-bottom: 1rem;
+            }
+        }
+
+        h5{
+            padding-bottom: 15px;
+            @media (max-width:768px) {
+                padding-bottom: 2rem;
+                
+            }
+        }
+        
+
+        
+    }
 }
