--- a/css/components/_index.scss
+++ b/css/components/_index.scss
@@ -1,1 +1,7 @@
 @forward "./navbar";
+@forward "./hero";
+@forward "./featured-speakers.scss";
+@forward "./countdown";
+@forward "./register-section";
+@forward "./event-preview";
+@forward "./footer";
