--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,101 @@ h1 {
   }
 }
 
-.nabar {
-  padding: 150px !important;
-}/*# sourceMappingURL=main.css.map */
+@media (min-width: 1440px) {
+  .navbar .container .collapse {
+    margin-left: 60px;
+  }
+}
+
+.hero-banner {
+  background-image: url("/Applications/WEB dev/First Project/images/Images - Banner.jpg");
+  width: 100%;
+  height: 60vh;
+  background-position: center;
+  background-size: cover;
+  margin-top: 50px;
+}
+.hero-banner .hero-content h1 {
+  width: 45%;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 768px) {
+  .hero-banner .hero-content h1 {
+    width: 100%;
+    font-size: 42px;
+    padding-bottom: 1rem;
+  }
+}
+.hero-banner .hero-content h5 {
+  padding-bottom: 15px;
+}
+@media (max-width: 768px) {
+  .hero-banner .hero-content h5 {
+    padding-bottom: 2rem;
+  }
+}
+
+.featured-speakers .row .col .card:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  transform: translateY(-5px);
+  color: #007bff;
+}
+
+.container-countdown {
+  width: 60%;
+}
+@media (max-width: 768px) {
+  .container-countdown {
+    width: 97%;
+  }
+}
+.container-countdown .row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+  animation: pulse 2s infinite;
+}
+@media (max-width: 1024px) {
+  .container-countdown .row {
+    width: 100%;
+  }
+}
+.container-countdown .row .col {
+  text-align: center;
+  background-color: rgba(0, 123, 255, 0.2);
+}
+.container-countdown .row .col .countdown-number {
+  font-size: 32px;
+  font-weight: bold;
+  color: #007bff;
+}
+.container-countdown .row .col span {
+  font-size: 18px;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.register-section p {
+  padding: 15px 0;
+}
+
+@media (max-width: 768px) {
+  .event-prev-section iframe {
+    width: 100%;
+    height: 25vh;
+  }
+}
+
+@f;/*# sourceMappingURL=main.css.map */
