--- a/css/main.css
+++ b/css/main.css
@@ -40,4 +40,72 @@ h1 {
   h1 {
     font-size: rem-calc(33);
   }
+}
+
+.conference-dcp {
+  margin-top: 100px;
+}
+.conference-dcp p {
+  font-size: larger;
+}
+
+@media (max-width: 425px) {
+  .gallery-container .row {
+    gap: 15px;
+  }
+}
+.gallery-container .row .col-md-4 .gallery-img {
+  width: 360px;
+  height: 200px;
+  border-radius: 0.3rem;
+}
+.gallery-container .row .col-md-4 .gallery-img:hover {
+  border-radius: 0.2rem;
+  transform: scale(1.05);
+  transition: 0.5s;
+}
+@media (max-width: 425px) {
+  .gallery-container .row .col-md-4 .gallery-img {
+    width: 100%;
+    height: 14rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer .container {
+    width: 100%;
+    padding: 0;
+  }
+}
+.footer .container p {
+  color: #707070;
+}
+.footer .container .social-media span {
+  padding: 5px;
+}
+.footer .container .social-media span a {
+  padding-left: 10px;
+  text-decoration: none;
+}
+@media (max-width: 768px) {
+  .footer .container .social-media span a {
+    padding-left: 5px;
+  }
+}
+.footer .container .social-media span i {
+  color: #007bff;
+}
+.footer .container .footer-menu a {
+  text-decoration: none;
+  padding-right: 10px;
+}
+.footer .container .text-center {
+  color: #707070;
+}
+.footer .container #backto-top {
+  text-decoration: none;
+  float: right;
+}
+.footer .container #backto-top:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
