--- a/css/core/_common-elements.scss
+++ b/css/core/_common-elements.scss
@@ -9,7 +9,7 @@ body {
   font-family: var.$font-family-base;
   font-weight: var.$font-weight-normal;
   line-height: var.$line-height-base;
-  // padding-top: 56px; // Offset for fixed navbar
+  padding-top: 56px; // Offset for fixed navbar
 }
 
 h1 {
@@ -17,5 +17,17 @@ h1 {
 
   @include mix.mobile-l-styles {
   font-size: var.$heading-size-big;
+  }
+}
+
+
+form{
+  .form-group{
+      padding: 10px;
+
+      label{
+          padding: 5px 0;
+        
+      }
   }
 }
