--- a/css/core/_common-elements.scss
+++ b/css/core/_common-elements.scss
@@ -9,7 +9,7 @@ body {
   font-family: var.$font-family-base;
   font-weight: var.$font-weight-normal;
   line-height: var.$line-height-base;
-  // padding-top: 56px; // Offset for fixed navbar
+  padding-top: 56px; // Offset for fixed navbar
 }
 
 h1 {
