--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.5;
+  padding-top: 56px;
 }
 
 h1 {
@@ -42,13 +43,29 @@ h1 {
   }
 }
 
+.navbar .container .collapse a {
+  color: #707070;
+}
+.navbar .container .collapse a:hover {
+  color: #000;
+}
+
+.footer .container .text-end a {
+  text-decoration: none;
+}
+.footer .container .text-end a:hover {
+  text-decoration: underline;
+}
+.footer .container p {
+  color: #707070;
+}
+
 .hero-banner {
   background-image: url("/Applications/WEB dev/First Project/images/Images - Banner.jpg");
   width: 100%;
   height: 60vh;
   background-position: center;
   background-size: cover;
-  margin-top: 50px;
 }
 .hero-banner .hero-content h1 {
   width: 45%;
@@ -131,43 +148,4 @@ h1 {
     width: 100%;
     height: 25vh;
   }
-}
-
-@media (max-width: 768px) {
-  .footer .container {
-    width: 100%;
-    padding: 0;
-  }
-}
-.footer .container p {
-  color: #707070;
-}
-.footer .container .social-media span {
-  padding: 5px;
-}
-.footer .container .social-media span a {
-  padding-left: 10px;
-  text-decoration: none;
-}
-@media (max-width: 768px) {
-  .footer .container .social-media span a {
-    padding-left: 5px;
-  }
-}
-.footer .container .social-media span i {
-  color: #007bff;
-}
-.footer .container .footer-menu a {
-  text-decoration: none;
-  padding-right: 10px;
-}
-.footer .container .text-center {
-  color: #707070;
-}
-.footer .container #backto-top {
-  text-decoration: none;
-  float: right;
-}
-.footer .container #backto-top:hover {
-  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
