--- a/css/components/_featured-speakers.scss
+++ b/css/components/_featured-speakers.scss
@@ -1,16 +1,11 @@
 @use "../abstract/variables" as var;
 
-.featured-speakers{
-    .row{
-        .col{
-            .card{
-                &:hover{
-                    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-                    transition: 0.3s;
-                    transform: translateY(-5px);
-                    color: var.$background-color-primary;
-                }
-            }
-        }
+
+.speakers-hover{
+    &:hover{
+        box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+        transition: 0.3s;
+        transform: translateY(-5px);
+        color: var.$background-color-primary;
     }
 }
