--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.5;
+  padding-top: 56px;
 }
 
 h1 {
@@ -57,6 +58,13 @@ h1 {
 }
 .footer .container p {
   color: #707070;
+}
+
+.featured-speakers .row .col .card:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  transform: translateY(-5px);
+  color: #007bff;
 }
 
 .hero-banner {
@@ -87,7 +95,7 @@ h1 {
   }
 }
 
-.featured-speakers .row .col .card:hover {
+.speakers-hover:hover {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   transform: translateY(-5px);
